--- a/style.css
+++ b/style.css
@@ -1,5 +1,205 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400&family=Open+Sans&family=Raleway&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: white;
+    overflow-x: hidden;
 }
+
+html {
+    font-size: 10px;
+    scroll-behavior: smooth;
+}
+
+/* Menu */
+
+header {
+    width: 100vw;
+    height: 80px;
+    background-color: rgb(24, 23, 23);
+    position: fixed;
+}
+
+.menu-container {
+    max-width: 70%;
+    height: 100%;    
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-container .logo {
+    width: 80px;
+}
+
+.menu {    
+    display: flex;
+    align-items: center;
+}
+
+.menu .menu-items {
+    display: flex;   
+}
+
+.menu .menu-items .item {    
+    list-style: none;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    padding: 0 10px 0 10px;    
+    letter-spacing: 4px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.menu .menu-items .item a {
+    text-decoration: none;    
+}
+
+/* Banner - Inicio */
+
+#inicio {
+    width: 100vw;
+    height: 100vh;    
+    background: url(./assets/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.6);
+    background-blend-mode: darken;
+}
+
+/* Sobre mim */
+
+#sobre {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;         
+}
+
+.container {
+    max-width: 1140px;
+    width: 70%;
+    margin: 0 auto;       
+    
+}
+
+.content-sobre {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;    
+}
+
+.content-sobre .header {
+    width: 60%;
+    margin-bottom: 50px;    
+    text-align: center;
+}
+
+.content-sobre .header h2 {
+    font-family: 'Dosis', sans-serif;
+    margin-bottom: 15px;
+    font-size: 3rem;
+    letter-spacing: 4px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.content-sobre .body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content-sobre .body .left {
+    width: 30%;
+    margin-right: 30px;
+}
+
+.content-sobre .body .left img {    
+    width: 100%;
+}
+
+
+.content-sobre .body .right {
+    width: 100%;    
+}
+
+.content-sobre .body .right h2 {
+    font-size: 2.8rem;
+    font-family: 'Dosis', sans-serif;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #fab702;
+    margin-bottom: 3px;
+}
+
+.content-sobre .body .right h3 {
+    font-size: 1.6rem;    
+    font-family: 'Dosis', sans-serif;    
+    font-weight: 100;
+    text-transform: uppercase;
+    color:#bababa;
+    margin-bottom: 25px;
+}
+
+.content-sobre .body .right p {
+    font-size: 1.4rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    color:#919191;
+    margin-bottom: 25px;
+}
+
+/* Linhas de Separação  */
+.content-sobre .header .lines {
+    width: 100%;
+    height: 45px;
+    position: relative;
+}
+
+.content-sobre .header .lines::after, .content-sobre .header .lines::before {
+    content: '';
+    position: absolute;
+    margin: auto;
+    height: 1px;
+    background: #4c4c4c;
+    width: 47%;
+    top: 45%;
+}
+
+.content-sobre .header .lines::after {
+    left: 0;
+}
+
+.content-sobre .header .lines::before {
+    right: 0;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    border: 2px solid #fab702;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: 15px auto; 
+}
+
+#habilidades {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+}
+
+
+
+/* fONTES 
+Raleway nav
+Dosis titulos
+open sans p
+*/
