--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ header {
 
 /* Sobre mim */
 
-#sobre {
+#sobre, #projetos {
     width: 100vw;
     background-color: black;         
 }
@@ -290,7 +290,54 @@ header {
 
 .habilidade img {
     margin-top: 20px;
-    width: 40%;    
+    width: 30%;    
 }
 
 
+/* Projetos */
+
+
+.line1, .line2 {
+    display: flex;
+    margin: 5px 0px;
+}
+
+.content-projeto {
+    display: flex;
+    margin: 0px 5px;      
+}
+.content-image {    
+    overflow-y: hidden;
+    position: relative;    
+   
+}
+.content-image img{
+    width: 100%;
+    height: 100%;
+}
+.image-black {
+    width: 300px;
+    height: 300px;
+    background-color: #000000c2;    
+    position: absolute;
+    opacity: 0;
+    transition: all 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+.image-black:hover {
+    opacity: 100;
+}
+
+.image-black h3 {
+    font-size: 25px;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+    color:#fab702;
+}
+
+.column {
+    flex-direction: column;
+}
